tests/good/misc/readline.pas
program ReadLine;

var
    i, j;
    k: int64;

begin
    ReadLn(i, j, k);
    WriteLn(i, ' ', j, ' ', k);
    ReadLn(i); ReadLn(j); ReadLn(k);
    WriteLn(i, ' ', j, ' ', k);
end.
