tests/bad/external-type-int64.pas
program external_type_int64;

procedure take64(x: int64); external;

begin
    take64(true)
end.
